fixed gap

--- a/src/style.css
+++ b/src/style.css
@@ -1039,6 +1039,7 @@
 
   .btn-section {
     flex-direction: column;
+    gap: 20px;
   }
 
   .dAddbtn {
